--- a/app/renderer/styles.css
+++ b/app/renderer/styles.css
@@ -102,6 +102,17 @@ body {
 
 .app-icon {
   font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+}
+
+.app-icon svg {
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 .version-info {
@@ -861,4 +872,13 @@ input[type="radio"] {
   width: 32px;
   height: 32px;
   margin-bottom: 8px;
+}
+
+/* 主题图标样式 */
+.theme-icon {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+  margin-right: 8px;
 }
